Include files to project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,9 @@ project(des_implementation)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(
+${PROJECT_NAME}
+    main.cpp
+    tables.h
+    utils.h
+)
